--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.11.1"
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.11.1",
+    "photoswipe": "^5.4.4",
+    "tailwindcss": "^4.1.11"
   }
 }
